<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstLabAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="apeido">Apeido</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="title_activity_name">NameActivity</string>
    <string name="title_activity_surname">SurnameActivity</string>
    <string name="title_activity_age">AgeActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="backButton">Main</string>
    <string name="SurnameBackButton">Main Menu</string>
    <string name="ageBackButton">Main Menu</string>
    <string name="nameLabel">Nombre</string>
    <string name="img">IMG</string>
    <color name="rojo">#ffff3015</color>
    <color name="verde">#ff2dff06</color>
    <color name="azul">#ff4cfaff</color>

</resources>
